# ulam_spiral

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Cargo.toml  README.md
apps/: CMakeLists.txt  uspiral.cpp
benches/: generate_ulam_matrix.rs
docs/: CMakeLists.txt  Doxyfile.in
include/graphics/: screen.h
include/spiral/: image.h  spiral.h
scripts/: build.sh  clean.sh  config.sh
src/: CMakeLists.txt  lib.rs  main.rs
src/graphics/: CMakeLists.txt  screen.cpp
src/spiral/: CMakeLists.txt  image.cpp  spiral.cpp
test/data/: uspiral_201.txt
test/spiral/: CMakeLists.txt  spiral_test.cpp
