[package]
name = "ulam_spiral"
version = "0.1.0"
edition = "2021"
description = "Visualize the Ulam spiral."
license = "Unlicense"

[[bin]]
name = "uspiral"
path = "src/main.rs"

[dependencies]
array2d = "0.3.2"
image = "0.25.4"
primal = "0.3.3"
clap = {version = "4.5.20", features = ["derive"]}
testdir = "0.9.1"
criterion = "0.5.1"

[[bench]]
name = "generate_ulam_matrix"
harness = false
